comment enable & version update

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,12 +4,13 @@ title: About
 date: 2023-02-24
 ---
 
-# Cloud
+# About me
 
-Hi there 👋.
+a Coder, Console & PC Gamer, Tech & Sci-fi Lover.
 
 ---
 
 - GitHub [@Cloud](https://github.com/GitHubCloud)
-- Steam [@Cloud](https://steamcommunity.com/id/CloudDotA)
+- Steam [@Cloud](https://steamcommunity.com/profiles/76561198062600953)
+- Bilibili [@Encloud](https://b23.tv/tGrV3YR)
 - Email cloud@encloud.info
